# SiReNetA

./: CHANGELOG.md  LICENSE  Legacy_Future_Funcs.py  NamingConventions.md  README.md  TODO_Before_Release.md  TODO_Future.md  TODO_ObjectOriented.md  TODO_v1.md  pyproject.toml  setup.py  v2_PseudoCode.ipynb
ProjectOrganization/: TODO_Before_Release.md  TODO_v1.md  v2_PseudoCode.ipynb
sireneta/: __init__.py  io_helpers.py  metrics.py  metrics_test.py  netmodels.py  responses.py  simulate.py  tools.py
src/sireneta/: __init__.py  io_helpers.py  metrics.py  metrics_test.py  netmodels.py  responses.py  simulate.py  tools.py
